[tool.poetry]
name = "namsbrautir"
version = "0.1.0"
description = ""
authors = ["Jökull Sólberg Auðunsson <jokull@solberg.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cffi = "^1.14.4"
cryptography = "^3.3.1"
datasette = "^0.54.1"
Scrapy = "^2.4.1"
SQLAlchemy = "^1.3.23"
datasette-publish-vercel = "^0.9.1"

[tool.poetry.dev-dependencies]
black = {version = "^20.8b1", allow-prereleases = true}
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
