[tool.poetry]
name = "namsbrautir"
version = "0.1.0"
description = ""
authors = ["Jökull Sólberg Auðunsson <jokull@solberg.is>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
cffi = "^1.14.4"
cryptography = "^3.3.1"
datasette = "^0.64.1"
Scrapy = "^2.8.0"
SQLAlchemy = "^1.3.23"
datasette-publish-vercel = "^0.14.2"
MarkupSafe = "2.0.1"

[tool.poetry.dev-dependencies]
black = "^23.1.0"
sqlalchemy-stubs = "^0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
